fix(layout): fix mobile menu jumping when body overflow is hidden by changing navbar to fixed position

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -8,7 +8,7 @@
 
 /* Navbar */
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -176,7 +176,7 @@
 
 /* Main Layout */
 .main-content {
-  padding-top: 2rem;
+  padding-top: calc(2rem + 75px);
   padding-bottom: 4rem;
   min-height: calc(100vh - 70px);
 }
